# iamx

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
iamx/: __init__.py  cli.py
iamx/aws/: __init__.py  bruteforce_tests.py  enumerator.py  generator.py
iamx/azure/: __init__.py  enumerator.py  generator.py  operations.py
iamx/gcp/: __init__.py  enumerator.py  generator.py  permissions.py
iamx/utils/: __init__.py  helpers.py
