[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iamx"
version = "1.0.0"
description = "Cloud IAM Permission Enumeration Tool for AWS, GCP, and Azure"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Devang Solanki" }
]
keywords = [
    "aws",
    "gcp",
    "azure",
    "iam",
    "rbac",
    "security",
    "enumeration",
    "permissions",
    "cloud",
    "pentesting",
    "red-team",
    "cloud-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "click>=8.1.0",
]

[project.optional-dependencies]
aws = [
    "boto3>=1.35.0",
]
gcp = [
    "google-api-python-client>=2.150.0",
    "google-auth>=2.35.0",
]
azure = [
    "azure-identity>=1.19.0",
    "azure-mgmt-resource>=23.2.0",
    "requests>=2.32.0",
]
all = [
    "boto3>=1.35.0",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.35.0",
    "azure-identity>=1.19.0",
    "azure-mgmt-resource>=23.2.0",
    "requests>=2.32.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-boto3>=1.35.0",
]

[project.scripts]
iamx = "iamx.cli:main"

[project.urls]
Homepage = "https://github.com/Devang-Solanki/iamx/iamx"
Documentation = "https://github.com/Devang-Solanki/iamx/iamx#readme"
Repository = "https://github.com/Devang-Solanki/iamx/iamx"
Issues = "https://github.com/Devang-Solanki/iamx/iamx/issues"

[tool.hatch.build.targets.wheel]
packages = ["iamx"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "PTH",  # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
